[package]
name = "backend-for-napp9-learn"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
libc = "0.2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
bcrypt = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rand = "0.8"
