[package]
name = "backend-for-napp9-learn"
version = "0.10.0"
edition = "2021"

[dependencies]
tiny_http = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pbkdf2 = "0.11"
sha2 = "0.10"
fastrand = "1"
base64 = "0.22"
subtle = "2"
rusqlite = "0.29"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hmac = "0.12"
tungstenite = "0.21"
